--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </div>
     </header> <!--antes fechava a div-->
 
-
-    <div class="products-container" style="color: rgb(10, 97, 172);">
+    
+    <div class="products-container" style="color: rgb(10, 97, 172);">   <!-- INICIO -AMOSTRAGEM- DE -PRATOS -->
         <div class="product">
             <img src="./img/PRATO-01-Carne de Sol na Moranga.jpg" alt="Produto 1">
             <h3>Carne de Sol na Moranga</h3>
@@ -110,8 +110,8 @@
             <h3>Batata Rustica</h3>
             <p>Descrição do Produto 6</p>
         </div>
-    </div>
-
+    </div>  <!-- FINAL -AMOSTRAGEM- DE -PRATOS -->
+ 
 
 
 
