--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <nav class="menu-horizontal">
             <ul>
-                <li><a href="#">INÍCIO</a></li>
-                <li><a href="#">CARDÁPIO</a></li>
+                <li><a href="index.html">INÍCIO</a></li>
+                <li><a href="CARDAPIO.html">CARDÁPIO</a></li>
                 <li><img src="./img/ICONE.png" alt=""></li>
                 <li><a href="#">RESERVAS</a></li>
                 <li><a href="#">CONTATO</a></li>
@@ -112,7 +112,7 @@
         </div>
     </div>  <!-- FINAL -AMOSTRAGEM- DE -PRATOS -->
  
-
+ 
 
 
 
